# zephyr-app-example

./: CMakeLists.txt  Kconfig  prj.conf  west.yml
.github/workflows/: main.yml
boards/: nucleo_h563zi.overlay
boards/perso/customboard/: Kconfig.customboard  Kconfig.defconfig  board.cmake  board.yml  customboard_nrf9151.dts  customboard_nrf9151_common-partitioning.dtsi  customboard_nrf9151_common-pinctrl.dtsi  customboard_nrf9151_common.dtsi  customboard_nrf9151_defconfig  customboard_nrf9151_ns.dts  customboard_nrf9151_ns_A.yaml  customboard_nrf9151_ns_defconfig  customboard_stm32h562xx-common.dtsi  customboard_stm32h562xx_defconfig  customboard_stm32h562xx_ns.dts  customboard_stm32h562xx_ns_A.yaml  customboard_stm32h562xx_ns_defconfig  pre_dt_board.cmake
boards/perso/customboard/support/: openocd.cfg
src/: main.c
src/utils/: threads.c  threads.h
